src/test/ui/invalid/invalid-no-sanitize.stderr
error: invalid argument for `no_sanitize`
  --> $DIR/invalid-no-sanitize.rs:3:15
   |
LL | #[no_sanitize(brontosaurus)]
   |               ^^^^^^^^^^^^
   |
   = note: expected one of: `address`, `cfi`, `hwaddress`, `kcfi`, `memory`, `memtag`, `shadow-call-stack`, or `thread`

error: aborting due to previous error

